# autonomy_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_feature_request.yaml
.github/workflows/: build-ros1.yml
cfg/: autonomy.cfg
config/: config_template.yaml
config/trajectories/template_dir/: template_trajectory.csv
include/: autonomy.h  autonomy_options.h  mathematics.h  sensors.h  timer.h  utilities.h
include/autonomy_core/: autonomy.h  autonomy_defs.h  autonomy_options.h  entity_event.h  mission.h
include/spdlog/: tweakme.h
include/state_machine/: abstract_state.h  state.h
include/state_machine/states/: end_mission.h  failure.h  flight.h  hold.h  hover.h  initialization.h  land.h  manual.h  mission_iterator.h  nominal.h  perform_mission.h  preflight.h  start_mission.h  takeoff.h  termination.h  undefined.h
include/timer/: timer.h
include/utils/: colors.h  except.h  format.h  logger.h  utilities.h
include/waypoints_parser/: waypoints_parser.h
launch/: autonomy.launch
msg/: LogMessage.msg
src/: autonomy.cpp  autonomy_node.cpp  timer.cpp
src/autonomy_core/: autonomy.cpp  entity_event.cpp  mission.cpp
src/state_machine/: abstract_state.cpp  state.cpp
src/state_machine/states/: end_mission.cpp  failure.cpp  flight.cpp  hold.cpp  hover.cpp  initialization.cpp  land.cpp  manual.cpp  mission_iterator.cpp  nominal.cpp  perform_mission.cpp  preflight.cpp  start_mission.cpp  takeoff.cpp  termination.cpp  undefined.cpp
src/timer/: timer.cpp
src/waypoints_parser/: waypoints_parser.cpp
