<?xml version="1.0"?>
<package format="2">
  <name>amaze_autonomy</name>
  <version>0.0.0</version>
  <description>The amade autonomy package</description>

  <maintainer email="christian.brommer@aau.at">chrbrommer</maintainer>
  <maintainer email="alessandro.fornasier@aau.at">alfornasier</maintainer>

  <license>BSD-2 with additional conditions</license>

  <author email="christian.brommer@aau.at">Christian Brommer</author>
  <author email="alessandro.fornasier@aau.at">Christian Brommer</author>

  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>autonomy_msgs</build_depend>
  <build_depend>ros_watchdog</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Use build_export_depend for packages you need in order to build against this package: -->

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Use exec_depend for packages you need at runtime: -->
  <exec_depend>message_runtime</exec_depend>

  <!-- Use test_depend for packages you need only for testing: -->

  <!-- Use doc_depend for packages you need only for building documentation: -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
